--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Hello World
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Home</title>
+ 
+<style type="text/css">
+body {
+	margin-left: 0px;
+	margin-top: 0px;
+	width: 100%;
+    height: 100%;
+}
+body{
+    background: url(home.jpg) no-repeat left top;
+    background-size: cover;
+	background-attachment:fixed;
+    background-color:#CCCCCC;
+}
+</style>
+</head>
+ 
+<body>
+      <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+ 
+        <tr>
+          <td><p style="font-family:verdana;font-size:120%;color:black">姓名：朱垚</p></td>
+        </tr>
+		
+        <tr>
+          <td><p style="font-family:verdana;font-size:120%;color:black">性别：男</p></td>
+        </tr>
+		
+		<tr>
+          <td><p style="font-family:verdana;font-size:120%;color:black">政治面貌：中共党员</p></td>
+        </tr>
+		
+        <tr>
+          <td><p style="font-family:verdana;font-size:120%;color:black">联系电话：18845613930</p></td>
+        </tr>
+		
+		<tr>
+          <td><p style="font-family:verdana;font-size:120%;color:black">Email: yaozhu@mail.ustc.edu.cn</p></td>
+        </tr>
+		<!--
+        <tr>
+          <td>年龄：18</td>
+        </tr>
+		-->
+        <tr>
+          <td>
+		  <p style="font-family:verdana;font-size:120%;color:black">
+		  研究生就读院校：<a href="https://baike.baidu.com/item/%E4%B8%AD%E5%9B%BD%E7%A7%91%E5%AD%A6%E6%8A%80%E6%9C%AF%E5%A4%A7%E5%AD%A6/160519?fr=aladdin">中国科学技术大学</a>
+		  </p>
+		  </td>
+        </tr>
+		
+		<tr>
+          <td>
+		  <p style="font-family:verdana;font-size:120%;color:black">
+		  本科就读院校：<a href="https://baike.baidu.com/item/%E5%93%88%E5%B0%94%E6%BB%A8%E5%B7%A5%E7%A8%8B%E5%A4%A7%E5%AD%A6/235286?fr=aladdin">哈尔滨工程大学</a>
+		  </p>
+		  </td>
+        </tr>
+		
+        <tr>
+          <td><p style="font-family:verdana;font-size:120%;color:black">兴趣特长：心理学、阅读、打排球</p></td>
+        </tr>  
+        <tr>
+          <td><p style="font-family:verdana;font-size:120%;color:black">关键词：学生	计算机</p></td>
+        </tr>
+		
+      </table>
+	   
+	<p style="font-family:verdana;font-size:120%;color:red"><a href="clock.html">钟</a></p>
+      <form id="form1" name="form1" method="post" action="">
+      </form>
+	  <div style="text-align: justify; width:100px;display: inline-block;height:30px;float: left;font-weight: bold;">
+	  About me<span class="duiqispan"></span></div>
+
+</body>
+</html>
