更新首页页

--- a/page.html
+++ b/page.html
@@ -29,8 +29,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="mbr-white col-md-10">
-                    <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">郑永川</h1>
-                    <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style typing">实习项目、科研项目以及个人项目介绍。</p>
+                    <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">朱垚</h1>
+                    <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style typing">个人技能、获得奖励及项目介绍</p>
                 </div>
             </div>
         </div>
@@ -49,17 +49,18 @@
                     <!-- <img src="http://i4.bvimg.com/634539/d3d1d3391a12d9e3.gif" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">游戏场景任意破坏与重建算法研究&nbsp;</h1>
-                    <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-5">2018.7.3 - 2018.8.31 
-<div>网易互娱梦幻事业部&nbsp;</div></h3>
+                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">互联网设备和计算机系统风险研究&nbsp;</h1>
+                    <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-5">2016.6 - 2016.9 
+<div>中国科学院信息工程研究所&nbsp;</div></h3>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• 提出了基于体素模型和 Marching Cube 的一整套破坏与重建算法。
-                            <br>• 使用 Unity 3D 进行算法实现，在算法实现上进行了大量优化，来提高时间效率、空间效率以及模型质量。例如使用享元模式来共享游戏模型中相同的数据、将原来的递归操作转迭代操作、 将一些关键参数转换为 2 的指数幂，从而将耗时的运算转换为位运算、使用乐观策略进行模型分隔分析。
-                            <br>• 梦幻事业部已经打算将这个课题落地，运用在梦幻西游 3D 手游中。</p>
+                        <p class="mbr-text mbr-fonts-style display-7">• 统计、提取、分析物联网设备的指纹，
+						主要包括路由器、打印机、摄像机等。
+                            <br>• 建立设备漏洞特征数据库。
+                            <br>• 参考CVSS的漏洞基础风险评估模型，对单一漏洞和一个计算机系统的安全风险进行分析和评估。</p>
                     </div>
 
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/CyC2018.github.io/blob/master/doc/%E6%B8%B8%E6%88%8F%E5%9C%BA%E6%99%AF%E4%BB%BB%E6%84%8F%E7%A0%B4%E5%9D%8F%E4%B8%8E%E9%87%8D%E5%BB%BA%E7%AE%97%E6%B3%95%E7%A0%94%E7%A9%B6.md" target="_blank">More</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/CyC2018/CyC2018.github.io/blob/master/doc/%E6%B8%B8%E6%88%8F%E5%9C%BA%E6%99%AF%E4%BB%BB%E6%84%8F%E7%A0%B4%E5%9D%8F%E4%B8%8E%E9%87%8D%E5%BB%BA%E7%AE%97%E6%B3%95%E7%A0%94%E7%A9%B6.md">More</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008" target="_blank">More</a>
+                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/yaozhu008">More</a></div>
 
                 </div>
             </div>
@@ -133,11 +134,11 @@
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
                     开源技术博客</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">开源在 Github 的技术博客，已有 38k star，在所有 Github 开源仓库中排前五十。&nbsp;
+                        <p class="mbr-text mbr-fonts-style display-7">开源在 Github 的技术博客&nbsp;
                             <br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/CS-Notes" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://yaozhu008.github.io/jekyll_demo/" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -231,7 +232,7 @@
             <div class="media-container-row pt-5 mt-2">
                 <div class="card p-3 align-center">
                     <div class="wrap">
-                        <div class="pie_progress progress1" role="progressbar" data-goal="70">
+                        <div class="pie_progress progress1" role="progressbar" data-goal="50">
                             <p class="pie_progress__number mbr-fonts-style display-5"></p>
                         </div>
                     </div>
@@ -255,7 +256,7 @@
                 </div>
                 <div class="card p-3 align-center">
                     <div class="wrap">
-                        <div class="pie_progress progress3" role="progressbar" data-goal="50">
+                        <div class="pie_progress progress3" role="progressbar" data-goal="70">
                             <p class="pie_progress__number mbr-fonts-style display-5"></p>
                         </div>
                     </div>
@@ -294,7 +295,7 @@
                     </div>
                     <div class="mbr-crt-title pt-3">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Spring
+                        Django
                     </h4>
                     </div>
                 </div>
@@ -306,7 +307,7 @@
                     </div>
                     <div class="mbr-crt-title pt-3">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        JavaScript
+                        HDFS
                     </h4>
                     </div>
                 </div>
@@ -339,7 +340,7 @@
                     </div>
                     <div class="mbr-crt-title pt-3">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        RabbitMQ
+                        未完
                     </h4>
                     </div>
                 </div>
@@ -351,7 +352,7 @@
                     </div>
                     <div class="mbr-crt-title pt-3">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        ZooKeeper
+                        未完
                     </h4>
                     </div>
                 </div>
@@ -372,15 +373,15 @@
                     <h5 class="pb-3">
                     Address
                 </h5>
-                    <p class="mbr-text">广东省番禺区中山大学实验中心 B 座</p>
+                    <p class="mbr-text">江苏省苏州市吴中区中国科学技术大学苏州研究院</p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class="pb-3">
                     Contacts
                 </h5>
                     <p class="mbr-text">
-                        Email: zhengyc101@163.com
-                        <br>Phone: (+86) 18020807381
+                        Email: yaozhu@mail.ustc.edu.cn
+                        <br>Phone: (+86) 18845613930
                         <br>
                     </p>
                 </div>
@@ -389,7 +390,7 @@
                     Links
                 </h5>
                     <div class="soc-item">
-                        <a href="https://github.com/CyC2018" target="_blank">
+                        <a href="https://github.com/yaozhu008" target="_blank">
                                 <span class="socicon-github socicon mbr-iconfont mbr-iconfont-social" style="color: #fff;"></span>
                             </a>
                     </div>
