--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             </br>
             欢迎关注我的公众号 程序员从放弃到入门</br> </br>
-            <img src="https://cyc-1256109796.cos.ap-guangzhou.myqcloud.com/%E5%85%AC%E4%BC%97%E5%8F%B7.jpg" width="150px" style="box-shadow: 2px -1px 11px 5px #aaa !important;">
+            <img src="assets\images\搜索联合传播.png" width="150px" style="box-shadow: 2px -1px 11px 5px #aaa !important;">
             <div class="col-md-4"></div>
         </div>
         <script type="text/javascript">
