--- a/page.html
+++ b/page.html
@@ -59,8 +59,8 @@
                             <br>• 参考CVSS的漏洞基础风险评估模型，对单一漏洞和一个计算机系统的安全风险进行分析和评估。</p>
                     </div>
 
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008" target="_blank">More</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/yaozhu008">More</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">More</a>
+                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/yaozhu008?tab=repositories">More</a></div>
 
                 </div>
             </div>
@@ -75,17 +75,17 @@
         <div class="container">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 135%;">
-                    <img src="assets/images/1-1014x325.png" alt="Mobirise" title="">
+                    <img src="assets/images/立项.jpg" alt="Mobirise" title="">
                     <!-- <img src="http://i4.bvimg.com/634539/824e7a3e73bb13a1.png" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    针对点云四边形网格生成算法研究</h1>
+                    科技立项</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <br>• 可以直接从点云数据生成四边形网格，省去了生成三角形网格的步骤，速度相比于 Remeshing 方法提高了数倍。
-                            <br>• 可以根据精度以及运行时间自适应地创建出不同大小的四边形网格。
-                            <br>• 论文已经被核心期刊“计算机辅助设计与图形学学报”正式接收。</p>
+                            <br>• 部属高校国家级大学生创新创业训练1项，验收合格并结题，
+							获得教育部资助10000元，校资助1000元。
+                            <br>• Flash游戏改进校普通型科研立项1项，结题通过，获得资助400元。</p>
                     </div>
                 </div>
             </div>
@@ -101,20 +101,21 @@
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 100%;">
                     <img src="assets/images/1-3.gif" alt="Mobirise" title="">
-                    <!-- <img src="http://i4.bvimg.com/634539/f6aeecd00ee91ad1.gif" alt="Mobirise" title=""> -->
+                    <!-- <img src="http://i1.bvimg.com/681516/e5d547d9925ce201.jpg" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    心电图波形分类算法研究
+                    获得奖励
                 </h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <br>• 由于心电图易受外界干扰，因此传统的心电图波形分类方法所需要的信息很难获取，而本方法只需要几个最容易得到的信息即可完成分类；
-                            <br>• 准确率达到了 98.58%，相比于其它的实现有很大的提升;
-                            <br>• 成功申请了软件专利并且该专利已经公开。</p>
+                            <br>• 获得校“三好学生”称号、获得国家励志奖学金、获得5次校奖学金
+                            <br>• 获得第六、七、八届全国大学生数学竞赛（非数学类）<br/>国家二等奖1次、省级二等奖1次、国家一等奖1次
+							<br>• 国际水下机器人大赛<br/>  全局视觉组水中救援二等奖、2D仿真组水中搬运三等奖
+                            <br>• 全国智力运动会全国大学生计算机博弈竞赛<br/>  九路围棋亚军、围棋三等奖、六子棋二等奖、国际跳棋三等奖</p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/ECG-Classifier" target="_blank">Github</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/CyC2018/ECG-Classifier">Github</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
+                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/yaozhu008?tab=repositories">Github</a></div>
                 </div>
             </div>
         </div>
@@ -128,17 +129,18 @@
         <div class="container">
             <div class="media-container-row">
                 <div class="mbr-figure" style="width: 100%;">
-                    <img src="assets/images/logomakr-0zpezn-563x600.png" alt="Mobirise" title="">
+                    <img src="assets\images\搜索联合传播.png" alt="Mobirise" title="">
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    开源技术博客</h1>
+                    微信公众号</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">开源在 Github 的技术博客&nbsp;
+                        <p class="mbr-text mbr-fonts-style display-7">公众号：程序员从放弃到入门<br>
+						Github 开源技术博客尚在开发&nbsp;
                             <br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://yaozhu008.github.io/jekyll_demo/" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://yaozhu008.github.io/jekyll_demo/" target="_blank">Github博客</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -158,13 +160,13 @@
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    微博系统实现</h1>
+                    基于人工智能的在线教育系统</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• 根据微博系统读多写少的特点，使用 MySQL 主从架构来支持读写分离；
-                            <br>• 根据微博系统热点数据明显的特点，使用 Redis 缓存热点数据；
-                            <br>• 使用 Redis 实现 Feed 流。</p>
+                        <p class="mbr-text mbr-fonts-style display-7">• Linux + Python + Django + MySQL搭建系统。
+                            <br>• 利用计算机视觉，基于OpenCV实时对学习者进行疲劳度、专心度检测。
+                            <br>• 根据数据库读多写少的特点，使用 Redis 实现主从分离，主服务负责写入，从服务器定期同步，并负责读取数据。</p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/MBlog" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -183,14 +185,14 @@
                     <!-- <img src="http://i4.bvimg.com/634539/b461705039bbac8e.gif" alt="Mobirise" title=""> -->
                 </div>
                 <div class="media-content">
-                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Github Markdown 文档转换工具</h1>
+                    <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">六子棋博弈算法优化及对弈平台实现</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• Github 的 Markdown 不支持目录、Mathjax 公式、图片居中显示以及一些特殊符号；
-                            <br>• 本工具可以自动生成目录、将公式转换为&nbsp;CodeCogs 云服务、使用 div 标签将图片居中以及替换一些特殊字符。
-                            <br>
+                        <p class="mbr-text mbr-fonts-style display-7">• 重点在于构造博弈树，以对弈双方落子后棋面作为节点，并利用合理剪枝加大博弈树搜索深度。
+                            <br>• 构造合理估值函数，对双方局势及落子后棋局进行棋力大小判断。 
+                            <br>• 存储优秀开局库，开局直接利用开局库进行合理布局，扩大优势。
                         </p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/GFM-Converter" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -210,11 +212,11 @@
                 </div>
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
-                    Leetcode 夜间主题样式</h1>
+                    miniweb框架实现</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">为 Leetcode 网站写的夜间主题样式，在 Stylish 社区已经有 300+ 的用户下载使用。</p>
+                        <p class="mbr-text mbr-fonts-style display-7">实现多进程的eb微服务器，支持WSGI协议，支持动态解析，支持伪静态，支持与MySQL交互，同时具有log日志功能。</p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/CyC2018/Dark-Theme-Leetcode" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -232,13 +234,13 @@
             <div class="media-container-row pt-5 mt-2">
                 <div class="card p-3 align-center">
                     <div class="wrap">
-                        <div class="pie_progress progress1" role="progressbar" data-goal="50">
+                        <div class="pie_progress progress1" role="progressbar" data-goal="70">
                             <p class="pie_progress__number mbr-fonts-style display-5"></p>
                         </div>
                     </div>
                     <div class="mbr-crt-title pt-3">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Java
+                        Python
                     </h4>
                     </div>
                 </div>
@@ -250,19 +252,19 @@
                     </div>
                     <div class="mbr-crt-title pt-3">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        C++
+                        Java
                     </h4>
                     </div>
                 </div>
                 <div class="card p-3 align-center">
                     <div class="wrap">
-                        <div class="pie_progress progress3" role="progressbar" data-goal="70">
+                        <div class="pie_progress progress3" role="progressbar" data-goal="50">
                             <p class="pie_progress__number mbr-fonts-style display-5"></p>
                         </div>
                     </div>
                     <div class="mbr-crt-title pt-3">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
-                        Python
+                        C/C++
                     </h4>
                     </div>
                 </div>
@@ -390,7 +392,7 @@
                     Links
                 </h5>
                     <div class="soc-item">
-                        <a href="https://github.com/yaozhu008" target="_blank">
+                        <a href="https://github.com/yaozhu008?tab=repositories" target="_blank">
                                 <span class="socicon-github socicon mbr-iconfont mbr-iconfont-social" style="color: #fff;"></span>
                             </a>
                     </div>
