--- a/page.html
+++ b/page.html
@@ -135,8 +135,8 @@
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
                     微信公众号</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">公众号：程序员从放弃到入门<br>
-						Github 开源技术博客尚在开发&nbsp;
+                        <p class="mbr-text mbr-fonts-style display-7">公众号：IT从放弃到入门<br>
+						开源技术博客  https://yaozhu.online/&nbsp;
                             <br>
                         </p>
                     </div>
@@ -375,7 +375,7 @@
                     <h5 class="pb-3">
                     Address
                 </h5>
-                    <p class="mbr-text">江苏省苏州市吴中区中国科学技术大学苏州研究院</p>
+                    <p class="mbr-text">中国科学技术大学</p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class="pb-3">
@@ -383,7 +383,7 @@
                 </h5>
                     <p class="mbr-text">
                         Email: yaozhu@mail.ustc.edu.cn
-                        <br>Phone: (+86) 18845613930
+                        <br>Phone: (+86) *
                         <br>
                     </p>
                 </div>
