--- a/page.html
+++ b/page.html
@@ -108,11 +108,12 @@
                     获得奖励
                 </h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            <br>• 获得校“三好学生”称号、获得国家励志奖学金、获得5次校奖学金
-                            <br>• 获得第六、七、八届全国大学生数学竞赛（非数学类）<br/>国家二等奖1次、省级二等奖1次、国家一等奖1次
-							<br>• 国际水下机器人大赛<br/>  全局视觉组水中救援二等奖、2D仿真组水中搬运三等奖
-                            <br>• 全国智力运动会全国大学生计算机博弈竞赛<br/>  九路围棋亚军、围棋三等奖、六子棋二等奖、国际跳棋三等奖</p>
+                        <p class="mbr-text mbr-fonts-style display-7"> <br>
+				• 校“三好学生”称号、获得国家励志奖学金、获得5次校优秀学生奖学金  <br>
+				• 第六、七、八届全国大学生数学竞赛（非数学类）<br/>国家二等奖1次、省级二等奖1次、国家一等奖1次  <br>
+			        • 国际水下机器人大赛<br/>  全局视觉组水中救援二等奖、2D仿真组水中搬运三等奖  <br>
+                                • 全国智力运动会全国大学生计算机博弈竞赛<br/>  九路围棋亚军、围棋三等奖、六子棋二等奖、国际跳棋三等奖
+			 </p>
                     </div>
                     <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://github.com/yaozhu008?tab=repositories">Github</a></div>
@@ -135,12 +136,12 @@
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
                     微信公众号</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">公众号：IT从放弃到入门<br>
-						开源技术博客  https://yaozhu.online/&nbsp;
+                        <p class="mbr-text mbr-fonts-style display-7">公众号    IT从放弃到入门<br>
+						开源技术博客    https://yaozhu.online/&nbsp;
                             <br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://yaozhu008.github.io/jekyll_demo/" target="_blank">Github博客</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://yaozhu.online/" target="_blank">Github博客</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -162,7 +163,7 @@
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
                     基于人工智能的在线教育系统</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• Linux + Python + Django + MySQL搭建系统。
+                        <p class="mbr-text mbr-fonts-style display-7">• Linux + Apache + MySQL + Python，使用Django搭建系统。
                             <br>• 利用计算机视觉，基于OpenCV实时对学习者进行疲劳度、专心度检测。
                             <br>• 根据数据库读多写少的特点，使用 Redis 实现主从分离，主服务负责写入，从服务器定期同步，并负责读取数据。</p>
                     </div>
@@ -187,9 +188,10 @@
                 <div class="media-content">
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">六子棋博弈算法优化及对弈平台实现</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• 重点在于构造博弈树，以对弈双方落子后棋面作为节点，并利用合理剪枝加大博弈树搜索深度。
-                            <br>• 构造合理估值函数，对双方局势及落子后棋局进行棋力大小判断。 
-                            <br>• 存储优秀开局库，开局直接利用开局库进行合理布局，扩大优势。
+                        <p class="mbr-text mbr-fonts-style display-7">
+				• 重点在于构造博弈树，以对弈双方落子后棋面作为节点，并利用合理剪枝加大博弈树搜索深度。  <br>
+                            	• 构造合理估值函数，对双方局势及落子后棋局进行棋力大小判断。 <br>
+                            	• 存储优秀开局库，开局直接利用开局库进行合理布局，扩大优势。
                         </p>
                     </div>
                     <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
