--- a/page.html
+++ b/page.html
@@ -163,7 +163,7 @@
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
                     基于人工智能的在线教育系统</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• Linux + Apache + MySQL + Python，使用Django搭建系统。
+                        <p class="mbr-text mbr-fonts-style display-7">• Linux + Apache + MySQL + Python，使用Django框架搭建系统。
                             <br>• 利用计算机视觉，基于OpenCV实时对学习者进行疲劳度、专心度检测。
                             <br>• 根据数据库读多写少的特点，使用 Redis 实现主从分离，主服务负责写入，从服务器定期同步，并负责读取数据。</p>
                     </div>
@@ -191,7 +191,8 @@
                         <p class="mbr-text mbr-fonts-style display-7">
 				• 重点在于构造博弈树，以对弈双方落子后棋面作为节点，并利用合理剪枝加大博弈树搜索深度。  <br>
                             	• 构造合理估值函数，对双方局势及落子后棋局进行棋力大小判断。 <br>
-                            	• 存储优秀开局库，开局直接利用开局库进行合理布局，扩大优势。
+                            	• 存储优秀开局库，开局直接利用开局库进行合理布局，扩大优势。 <br>
+				• 本项目在全国大学生计算机博弈大赛中获得二等奖。
                         </p>
                     </div>
                     <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
@@ -216,7 +217,7 @@
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
                     miniweb框架实现</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">实现多进程的eb微服务器，支持WSGI协议，支持动态解析，支持伪静态，支持与MySQL交互，同时具有log日志功能。</p>
+                        <p class="mbr-text mbr-fonts-style display-7">实现多进程的Web微服务器，支持WSGI协议，支持动态解析，支持伪静态，支持与MySQL交互，同时具有log日志功能。</p>
                     </div>
                     <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
