--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <span id="busuanzi_container_site_pv" style="font-size: 10px; " >Site View : <span id="busuanzi_value_page_pv"></span></span>
             </div>
             </br>
-            欢迎关注我的公众号 IT从放弃到入门</br> </br>
+            欢迎关注我的公众号 IT从入门到放弃</br> </br>
             <img src="assets\images\搜索联合传播.png" width="150px" style="box-shadow: 2px -1px 11px 5px #aaa !important;">
             <div class="col-md-4"></div>
         </div>
