--- a/page.html
+++ b/page.html
@@ -378,14 +378,14 @@
                     <h5 class="pb-3">
                     Address
                 </h5>
-                    <p class="mbr-text">中国科学技术大学</p>
+                    <p class="mbr-text">USTC</p>
                 </div>
                 <div class="col-12 col-md-3 mbr-fonts-style display-7">
                     <h5 class="pb-3">
                     Contacts
                 </h5>
                     <p class="mbr-text">
-                        Email: yaozhu@mail.ustc.edu.cn
+                        Email: 
                         <br>Phone: (+86) *
                         <br>
                     </p>
