--- a/page.html
+++ b/page.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="mbr-white col-md-10">
-                    <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">朱垚</h1>
+                    <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">zhuyao</h1>
                     <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style typing">个人技能、获得奖励及项目介绍</p>
                 </div>
             </div>
@@ -395,7 +395,7 @@
                     Links
                 </h5>
                     <div class="soc-item">
-                        <a href="https://github.com/yaozhu008?tab=repositories" target="_blank">
+                        <a href="https://github.com/juoyo?tab=repositories" target="_blank">
                                 <span class="socicon-github socicon mbr-iconfont mbr-iconfont-social" style="color: #fff;"></span>
                             </a>
                     </div>
