--- a/page.html
+++ b/page.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="mbr-white col-md-10">
-                    <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">zhuyao</h1>
+                    <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">zhu yao</h1>
                     <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style typing">个人技能、获得奖励及项目介绍</p>
                 </div>
             </div>
@@ -53,14 +53,14 @@
                     <h3 class="mbr-section-subtitle align-left mbr-white mbr-light pb-3 mbr-fonts-style display-5">2016.6 - 2016.9 
 <div>中国科学院信息工程研究所&nbsp;</div></h3>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">• 统计、提取、分析物联网设备的指纹，
-						主要包括路由器、打印机、摄像机等。
-                            <br>• 建立设备漏洞特征数据库。
-                            <br>• 参考CVSS的漏洞基础风险评估模型，对单一漏洞和一个计算机系统的安全风险进行分析和评估。</p>
+                        <p class="mbr-text mbr-fonts-style display-7">
+                            • 统计、提取、分析物联网设备的指纹。<br>
+                            • 建立设备漏洞特征数据库。<br>
+                            • 参考CVSS的漏洞基础风险评估模型，对单一漏洞和一个计算机系统的安全风险进行分析和评估。</p>
                     </div>
 
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">More</a>
-                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/yaozhu008?tab=repositories">More</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/juoyo?tab=repositories" target="_blank">More</a>
+                        <a class="btn btn-md btn-black-outline display-4" href="https://github.com/juoyo?tab=repositories">More</a></div>
 
                 </div>
             </div>
@@ -83,9 +83,8 @@
                     科技立项</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
                         <p class="mbr-text mbr-fonts-style display-7">
-                            <br>• 部属高校国家级大学生创新创业训练1项，验收合格并结题，
-							获得教育部资助10000元，校资助1000元。
-                            <br>• Flash游戏改进校普通型科研立项1项，结题通过，获得资助400元。</p>
+                            <br>• 部属高校国家级大学生创新创业训练1项，验收合格并结题，获得教育部资助10000元。
+                            <br>• Flash游戏改进校普通型科研立项1项，结题通过。</p>
                     </div>
                 </div>
             </div>
@@ -136,12 +135,12 @@
                     <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">
                     微信公众号</h1>
                     <div class="mbr-section-text mbr-white pb-3 ">
-                        <p class="mbr-text mbr-fonts-style display-7">公众号    IT从放弃到入门<br>
+                        <p class="mbr-text mbr-fonts-style display-7">公众号    朋友请坐吧<br>
 						开源技术博客    https://yaozhu.online/&nbsp;
                             <br>
                         </p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://yaozhu.online/" target="_blank">Github博客</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://juoyo.github.io/" target="_blank">Github博客</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -167,7 +166,7 @@
                             <br>• 利用计算机视觉，基于OpenCV实时对学习者进行疲劳度、专心度检测。
                             <br>• 根据数据库读多写少的特点，使用 Redis 实现主从分离，主服务负责写入，从服务器定期同步，并负责读取数据。</p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/juoyo?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -195,7 +194,7 @@
 				• 本项目在全国大学生计算机博弈大赛中获得二等奖。
                         </p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/juoyo?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -219,7 +218,7 @@
                     <div class="mbr-section-text mbr-white pb-3 ">
                         <p class="mbr-text mbr-fonts-style display-7">实现多进程的Web微服务器，支持WSGI协议，支持动态解析，支持伪静态，支持与MySQL交互，同时具有log日志功能。</p>
                     </div>
-                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/yaozhu008?tab=repositories" target="_blank">Github</a>
+                    <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/juoyo?tab=repositories" target="_blank">Github</a>
                         <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a></div>
                 </div>
             </div>
@@ -385,7 +384,7 @@
                     Contacts
                 </h5>
                     <p class="mbr-text">
-                        Email: 
+                        Email: juoyohub at gmail.com
                         <br>Phone: (+86) *
                         <br>
                     </p>
